added services page

--- a/src/layouts/reasons/Reasons.css
+++ b/src/layouts/reasons/Reasons.css
@@ -17,6 +17,7 @@
   gap: 4.125rem;
 }
 .ReasonsCard {
+  background-color: #fff;
   border: 1.4px solid #e0e3eb;
   box-sizing: border-box;
   border-radius: 4px;
