created 75% of stats page

--- a/src/layouts/aboutus/AboutUs.css
+++ b/src/layouts/aboutus/AboutUs.css
@@ -3,7 +3,7 @@
   display: flex;
   align-items: flex-start;
   position: relative;
-  margin-bottom: 250px; /*including marin-top of services*/
+  margin-bottom: 200px;
 }
 
 .AboutUs {
