--- a/src/layouts/hero/Hero.css
+++ b/src/layouts/hero/Hero.css
@@ -1,9 +1,9 @@
 .HeroContainer {
   width: 100%;
   background: url(../../assets/images/bg_hero.png);
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position: center;
   position: relative;
 }
 .HeroInner {
