--- a/src/layouts/form/Form.css
+++ b/src/layouts/form/Form.css
@@ -24,6 +24,7 @@
   margin-bottom: 20px;
 }
 .InnerForm input {
+  /* width: 300px; */
   padding: 10px 8px;
   border-radius: 4px;
   border: 1px solid #e0e3eb;
