--- a/src/layouts/form/Form.css
+++ b/src/layouts/form/Form.css
@@ -1,67 +1,72 @@
+.FormOutCont {
+    width: 100%;
+    background-color: #f6f8f7;
+}
 .FormCont {
-  width: 100%;
-  padding: 60px 29.5%;
-  background-color: #f6f8f7;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    max-width: 780px;
+    margin: 0 auto;
+    padding: 60px 30px;
+    display: flex;
+    flex-direction: column;
 }
 .FormCont h2 {
-  font-weight: bold;
-  font-size: 36px;
-  line-height: 42px;
-  margin-bottom: 20px;
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 42px;
+    margin-bottom: 20px;
+    text-align: center;
 }
 .FormCont p {
-  font-size: 20px;
-  line-height: 23px;
-  text-align: center;
-  margin-bottom: 40px;
+    font-size: 20px;
+    line-height: 23px;
+    text-align: center;
+    margin-bottom: 40px;
 }
 .InnerForm {
-  display: flex;
-  gap: 30px;
-  margin-bottom: 20px;
+    max-width: 100%;
+    display: flex;
+    gap: 30px;
+    margin-bottom: 20px;
 }
 .InnerForm input {
-  /* width: 300px; */
-  padding: 10px 8px;
-  border-radius: 4px;
-  border: 1px solid #e0e3eb;
+    flex: 1;
+    padding: 10px 8px;
+    border-radius: 4px;
+    border: 1px solid #e0e3eb;
 }
 .InnerForm input::placeholder {
-  color: #a3aac2;
-  font-size: 18px;
-  line-height: 21px;
+    color: #a3aac2;
+    font-size: 18px;
+    line-height: 21px;
 }
 .FormCont textarea {
-  width: 100%;
-  border-radius: 4px;
-  border: 1px solid #e0e3eb;
-  margin-bottom: 10px;
+    width: 100%;
+    border-radius: 4px;
+    border: 1px solid #e0e3eb;
+    margin-bottom: 10px;
 }
 .FormCont textarea::placeholder {
-  color: #a3aac2;
-  font-size: 18px;
-  line-height: 21px;
+    color: #a3aac2;
+    font-size: 18px;
+    line-height: 21px;
 }
 .FormCont p:last-of-type {
-  color: #a3aac2;
-  align-self: flex-start;
-  font-size: 16px;
-  line-height: 19px;
-  margin-bottom: 30px;
+    color: #a3aac2;
+    align-self: flex-start;
+    font-size: 16px;
+    line-height: 19px;
+    margin-bottom: 30px;
 }
 .FormCont p span {
-  color: #c40303;
+    color: #c40303;
 }
 .FormCont button {
-  background: #2947a9;
-  color: #fff;
-  padding: 16px 80px;
-  font-weight: 600;
-  font-size: 18px;
-  line-height: 21px;
-  border: none;
-  border-radius: 2px;
+    background: #2947a9;
+    color: #fff;
+    padding: 16px 80px;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 21px;
+    border: none;
+    border-radius: 2px;
 }
