--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -2,11 +2,11 @@
 Color Pallete
 ---------*/
 
-$primary: #2947a9;
-$secondary: #f9995d;
+$clr-primary: #2947a9;
+$clr-secondary: #f9995d;
 
 /* Grays */
-$neutral: (
+$clr-neutral: (
     900: #14171f,
     800: #292e3d,
     700: #3d445c,
@@ -19,32 +19,29 @@ $neutral: (
     50: #f6f8f7,
 );
 
-$white: #fff;
+$clr-white: #fff;
 /*---------
 ---------*/
-
-
 
 /*---------
 Font Sizes
 ---------*/
 /* Headings */
-$heading-1: 4.5rem;   /* 72px */
-$heading-2: 3.75rem;  /* 60px */
-$heading-3: 3rem;     /* 48px */
-$heading-4: 2.25rem;  /* 36px */
-$heading-5: 1.875rem; /* 30px */
+$h1: 4.5rem; /* 72px */
+$h2: 3.75rem; /* 60px */
+$h3: 3rem; /* 48px */
+$h4: 2.25rem; /* 36px */
+$h5: 1.875rem; /* 30px */
 
 /* Paragraps */
-$para-lg: 1.5rem;     /* 24px */
-$para-md: 1.25rem;   /* 20px */
+$para-lg: 1.5rem; /* 24px */
+$para-md: 1.25rem; /* 20px */
 $para-reg: 1.125rem; /* 18px */
 
-$subtitle: 1.25rem;   /* 20px */
-$caption: 1rem;       /* 16px */
+$subtitle: 1.25rem; /* 20px */
+$caption: 1rem; /* 16px */
 /*---------
 ---------*/
-
 
 /*---------
 Shadows
@@ -54,7 +51,7 @@ $shadow-lg: 0px 12px 16px -4px rgba(17, 24, 39, 0.1),
 
 $shadow-md: 0px 20px 24px -4px rgba(17, 24, 39, 0.1),
     0px 8px 8px -4px rgba(17, 24, 39, 0.04);
-    
+
 $shadow-reg: 0px 0px 37px -2px rgba(17, 24, 39, 0.05);
 /*---------
 ---------*/
