--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -12,40 +12,53 @@
         @include abs.breakpoint(xl, max) {
             height: 540px;
         }
+        @include abs.breakpoint(rg, max) {
+            height: 440px;
+        }
+        @include abs.breakpoint(sm, max) {
+            height: 400px;
+        }
         @include abs.flex($align: start, $direction: col);
         & .container {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
+            @include abs.breakpoint(1090px, max) {
+                grid-template-columns: repeat(1, 1fr);
+            }
 
             & h2 {
                 color: map-get(abs.$clr-neutral, 800);
                 font-weight: 600;
-                font-size: abs.$h1;
-                line-height: 84px;
+                padding-right: 40px;
+                @include abs.breakpoint(1170px, max) {
+                    padding-right: 0px;
+                    text-align: center;
+                }
             }
         }
     }
 
     & .feature-box {
-        position: absolute;
-        right: 0;
-        bottom: 0;
-        z-index: 1;
+        margin-inline: auto;
         padding-top: 20px;
         @include abs.flex($justify: between, $align: stretch, $direction: col);
-        width: 416px;
+        max-width: 416px;
         height: 190px;
         background-color: abs.$clr-primary;
         color: abs.$clr-white;
+        @include abs.breakpoint(1090px) {
+            position: absolute;
+            right: 0;
+            bottom: 0;
+            z-index: 1;
+        }
 
         & h3 {
             font-weight: 700;
-            font-size: abs.$para-md;
             text-align: center;
         }
         & p {
             text-align: center;
-            font-size: abs.$para-lg;
             line-height: 28px;
         }
 
@@ -55,7 +68,6 @@
                 flex-grow: 1;
                 border: none;
                 padding-block: 8px;
-                font-size: abs.$para-reg;
                 background-color: map-get(abs.$clr-neutral, 800);
                 @include abs.flex($gap: 10);
             }
