--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -12,12 +12,12 @@ $breakpoints: (
 @mixin breakpoint($width, $type: min) {
     @if map-has-key($breakpoints, $width) {
         $width: map-get($breakpoints, $width);
-        @if $type == max {
-            $width: $width - 1px;
-        }
-        @media only screen and (#{$type}-width: $width) {
-            @content;
-        }
+    }
+    @if $type == max {
+        $width: $width - 1px;
+    }
+    @media only screen and (#{$type}-width: $width) {
+        @content;
     }
 }
 
@@ -51,6 +51,8 @@ $breakpoints: (
         "between": space-between,
         "around": space-around,
         "evenly": space-evenly,
+        "start": flex-start,
+        "end": flex-end,
     );
     $aligns: (
         "center": center,
