--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -14,6 +14,9 @@
         line-height: 50px;
     }
 }
+.h4 {
+    font-size: $h4;
+}
 .h5 {
     font-size: $h5;
 }
@@ -26,4 +29,11 @@
 }
 .para-reg {
     font-size: $para-reg;
+}
+
+.subtitle {
+    font-size: $subtitle;
+}
+.caption {
+    font-size: $caption;
 }
