--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -14,7 +14,7 @@ $breakpoints: (
         $width: map-get($breakpoints, $width);
     }
     @if $type == max {
-        $width: $width - 1px;
+        $width: calc($width - 1px);
     }
     @media only screen and (#{$type}-width: $width) {
         @content;
