made about us responsive

--- a/src/components/aboutUs/AboutUs.scss
+++ b/src/components/aboutUs/AboutUs.scss
@@ -17,13 +17,26 @@
                 z-index: -1;
             }
             & .text {
+                max-width: 480px;
+                max-height: 520px;
                 grid-column: 5 / 9;
                 place-self: center end;
                 grid-row: 1/ 2;
                 z-index: 1;
             }
         }
-
+        @include breakpoint(1140px, max) {
+            padding-inline: 20px;
+            @include flex($direction: col);
+            & .portrait img {
+                border-bottom-left-radius: 0 !important;
+                border-bottom-right-radius: 0 !important;
+            }
+            & .text {
+                border-top-left-radius: 0 !important;
+                border-top-right-radius: 0 !important;
+            }
+        }
         & .portrait {
             & img {
                 width: 100%;
@@ -34,8 +47,6 @@
         }
 
         & .text {
-            max-width: 480px;
-            max-height: 520px;
             padding: 40px 50px 60px;
             color: $clr-white;
             background-color: $clr-primary;
@@ -58,6 +69,23 @@
                 color: $clr-primary;
                 line-height: 21px;
                 background: $clr-white;
+            }
+
+            @include breakpoint(430px, max) {
+                padding: 40px;
+
+                & h3 {
+                    margin-bottom: 25px;
+                }
+                & p {
+                    margin-bottom: 20px;
+                }
+                & p + p {
+                    margin-bottom: 40px;
+                }
+                & button {
+                    padding: 16px 20px;
+                }
             }
         }
     }
