--- a/src/components/experience/Experience.scss
+++ b/src/components/experience/Experience.scss
@@ -6,10 +6,12 @@
         height: 500px;
         & .stats {
             & .card {
-                padding: 30px 50px 30px 30px;
+                padding: 30px;
                 box-shadow: $shadow-lg;
+                background-color: $clr-white;
                 border: 1px solid #fff;
                 border-radius: 4px;
+                position: relative;
                 & h3 {
                     color: map-get($clr-neutral, 800);
                     line-height: 84px;
@@ -28,9 +30,38 @@
                         line-height: 24px;
                     }
                 }
+                & img {
+                    position: absolute;
+                }
+            }
+            & .card:nth-child(1) {
+                & img {
+                    top: 0%;
+                    left: 77%;
+                }
+            }
+            & .card:nth-child(2) {
+                & img {
+                    top: -18%;
+                    left: -10%;
+                }
+            }
+            & .card:nth-child(3) {
+                & img {
+                    top: 4%;
+                    left: 72%;
+                }
+            }
+            & .card:nth-child(4) {
+                & img {
+                    top: 77%;
+                    left: 87%;
+                }
             }
         }
         & .text {
+            padding-top: 50px;
+            padding-bottom: 78px;
             & h2 {
                 color: $clr-primary;
                 line-height: 70px;
@@ -53,6 +84,35 @@
         display: grid;
         grid-template-columns: 7fr 3fr;
         & .stats {
+            position: relative;
+            & .card {
+                position: absolute;
+                padding-right: 60px;
+            }
+            & .card:nth-child(1),
+            & .card:nth-child(3) {
+                z-index: 10;
+            }
+            & .card:nth-child(2),
+            & .card:nth-child(4) {
+                z-index: 5;
+            }
+            & .card:nth-child(1) {
+                top: 0%;
+                left: 45%;
+            }
+            & .card:nth-child(2) {
+                top: 23%;
+                left: 10%;
+            }
+            & .card:nth-child(3) {
+                top: 54%;
+                left: 38%;
+            }
+            & .card:nth-child(4) {
+                top: 70%;
+                left: 15%;
+            }
         }
         & .text {
         }
