--- a/src/components/ad/Ad.scss
+++ b/src/components/ad/Ad.scss
@@ -25,7 +25,7 @@
                 text-decoration: underline;
             }
         }
-        & .cta {
+        & .ad-cta {
             & button {
                 padding: 16px 20px;
                 margin-left: 20px;
@@ -39,7 +39,7 @@
             & .text {
                 text-align: center;
             }
-            & .cta {
+            & .ad-cta {
                 & button {
                     margin-left: 0px;
                 }
