--- a/src/components/cta/Cta.scss
+++ b/src/components/cta/Cta.scss
@@ -30,6 +30,25 @@
             );
             gap: 20px 32px;
             margin-bottom: 20px;
+
+            & .dropdown {
+                position: relative;
+                & select {
+                    -webkit-appearance: none;
+                    -moz-appearance: none;
+                    text-indent: 1px;
+                    text-overflow: "";
+                    width: 100%;
+                    height: 100%;
+                }
+                & img {
+                    position: absolute;
+                    z-index: 10;
+                    top: 50%;
+                    right: 8px;
+                    transform: translateY(-50%);
+                }
+            }
         }
 
         & .textarea {
@@ -38,6 +57,13 @@
             margin-bottom: 8px;
         }
 
+        & .dropdown select,
+        & .dropdown select option,
+        & .textarea::placeholder,
+        & input::placeholder {
+            color: map-get($clr-neutral, 300);
+        }
+        & .dropdown select,
         & .textarea,
         & input {
             padding: 7px 8px;
@@ -46,6 +72,7 @@
             border-radius: 4px;
             outline: none;
         }
+        & .dropdown select:focus,
         & .textarea:focus,
         & input:focus {
             box-shadow: 0px 0px 0px 3px #697ec3, -0px -0px 0px 3px #697ec3;
