added linkedin in footer

--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -103,5 +103,13 @@
         background-color: $clr-primary;
         color: $clr-white;
         padding: 23px 0;
+
+        & .container {
+            @include flex($justify: between, $gap: 8, $wrap: true);
+
+            & .myself {
+                color: $clr-secondary;
+            }
+        }
     }
 }
